--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2022-02-25 Version: 1.0.3
+- Add global switch AllowUserToManagePersonalDingTalk.
+
 2021-11-03 Version: 1.0.2
 - Fix the exception when setting verification types.
 
