--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2023-01-06 Version: 1.0.4
+- Add tag api tagResources、untagResources、listTagResources
+
 2022-02-25 Version: 1.0.3
 - Add global switch AllowUserToManagePersonalDingTalk.
 
