--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2023-01-09 Version: 1.0.5
+- Add verification configuration for risky logins.
+
 2023-01-06 Version: 1.0.4
 - Add tag api tagResources、untagResources、listTagResources
 
