--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+2023-02-21 Version: 1.0.6
+- Add recyclebin api for user and accesskey.
+
 2023-01-09 Version: 1.0.5
 - Add verification configuration for risky logins.
 
